--- a/phase_1/indexing/visualization.ipynb
+++ b/phase_1/indexing/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,58 @@
     "\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multithreaded = np.load(\"multithreaded.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([638.833317,   0.      ])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multithreaded.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[127.766651, 127.856979, 128.180718, 127.083245, 127.945724,\n",
+       "          0.      ,   0.      ,   0.      ,   0.      ,   0.      ],\n",
+       "       [  0.      ,   0.      ,   0.      ,   0.      ,   0.      ,\n",
+       "          0.      ,   0.      ,   0.      ,   0.      ,   0.      ]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multithreaded"
    ]
   },
   {
